--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
 spring.application.name=pets-care
+
+spring.datasource.url=jdbc:mysql://localhost:3306/cohort46M
+spring.datasource.username=root
+spring.datasource.password=1234
+#JPA Hibernate
+spring.jpa.hibernate.ddl-auto = update
+#Dev mode
+spring.jpa.show-sql=true
