--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,4 @@ spring.datasource.password=1234
 spring.jpa.hibernate.ddl-auto = update
 #Dev mode
 spring.jpa.show-sql=true
+server.servlet.context-path=/api
