--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=pets-care
 
-spring.datasource.url=jdbc:mysql://localhost:3306/cohort46M
-spring.datasource.username=root
+spring.datasource.url=jdbc:mysql://localhost:3306/pets-care
+spring.datasource.username=alex
 spring.datasource.password=1234
 server.servlet.context-path=/api
 #JPA Hibernate
