--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,6 +4,7 @@ spring.datasource.url=jdbc:mysql://localhost:3306/pets-care
 spring.datasource.username=alex
 spring.datasource.password=1234
 server.servlet.context-path=/api
+spring.servlet.multipart.max-file-size=10MB
 #JPA Hibernate
 spring.jpa.hibernate.ddl-auto = update
 #Dev mode
