--- a/pom.xml
+++ b/pom.xml
@@ -28,6 +28,7 @@
     </scm>
     <properties>
         <java.version>17</java.version>
+        <start.class>ait.cohort46.PetsCareApplication</start.class>
     </properties>
     <dependencies>
         <dependency>
@@ -84,7 +85,7 @@
         <dependency>
             <groupId>org.hibernate.validator</groupId>
             <artifactId>hibernate-validator</artifactId>
-            <version>8.0.1.Final</version> <!-- Проверьте актуальную версию -->
+            <version>8.0.1.Final</version>
         </dependency>
 
     </dependencies>
@@ -96,6 +97,7 @@
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <configuration>
+                    <mainClass>ait.cohort46.PetsCareApplication</mainClass>
                     <excludes>
                         <exclude>
                             <groupId>org.projectlombok</groupId>
