--- a/src/test/resources/application-test.yml
+++ b/src/test/resources/application-test.yml
@@ -2,3 +2,6 @@ spring:
   jpa:
     hibernate:
       ddl-auto: create-drop
+  aws:
+      access-key: ${AWS_ACCESS_KEY}
+      secret-key: ${AWS_SECRET_ACCESS}
